--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-VITE_API_URL=http://localhost:8000
+# VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://sooqna-server.onrender.com
+
 
 # firebase config keys
 VITE_FIREBASE_APP_API_KEY="AIzaSyACMgm1rhTFWSPgh8XMAiM0opb2YM5OwDE"
