--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
+    "react-barcode": "^1.6.1",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
