--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=http://localhost:8000
-# VITE_API_URL=https://sooqna-server.onrender.com
+# VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://api.soouqna.com
 
 
 # firebase config keys
