--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "admin": "file:",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "lucide-react": "^0.513.0",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
     "react-collapse": "^5.1.1",
