--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.2.0",
     "admin": "file:",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "firebase": "^11.2.0",
     "lucide-react": "^0.513.0",
     "react": "^18.3.1",
