--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "set \"GENERATE_SOURCEMAP=false\" && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "firebase": "^11.2.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.513.0",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
