--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # VITE_API_URL=http://localhost:8000
+# VITE_API_URL=https://drawing-associate-called-chad.trycloudflare.com 
 VITE_API_URL=https://api.soouqna.com
 
 
