--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-inner-image-zoom": "^3.0.2",
     "react-international-phone": "^4.4.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-qr-barcode-scanner": "^2.1.8",
     "react-router-dom": "^7.0.2",
     "react-simple-wysiwyg": "^3.2.0",
     "react-top-loading-bar": "^3.0.2",
