admin variable changed

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_API_URL=http://localhost:8000
+# VITE_API_URL=http://localhost:8000
 # VITE_API_URL=https://drawing-associate-called-chad.trycloudflare.com 
-# VITE_API_URL=https://api.soouqna.com
+VITE_API_URL=https://api.soouqna.com
 
 
 # firebase config keys
